# dbx-ignore

./: .gitignore  API.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.cross  INSTALL.md  Makefile  README.md  install.sh  rustfmt.toml
.dbx-ignore/: tracked_files.json
.github/workflows/: release.yml
scripts/: build-all.sh  build-docker.sh  build-simple.sh
src/: lib.rs  main.rs  traits.rs
src/core/: daemon.rs  json_utils.rs  mod.rs  status.rs  tracked_files.rs  watch.rs
src/utils/: git_utils.rs  gitignore_manager.rs  json_utils.rs  mod.rs  pattern_matcher.rs  platform_utils.rs
tests/: cli_tests.rs  git_tests.rs  git_validation_test.rs  integration_tests.rs  json_operations_test.rs  linux_tests.rs  macos_tests.rs  pattern_consistency_test.rs  pattern_matching_test.rs  platform_tests.rs  reset_tests.rs  status_tests.rs  tracked_files_tests.rs  validation_tests.rs  watch_tests.rs  wildcard_tests.rs  windows_tests.rs
tests/common/: mod.rs
