[package]
name = "dbx-ignore"
version = "0.2.1"
edition = "2024"
description = "CLI tool to prevent Dropbox from syncing files by adding ignore markers"
authors = ["Claude Code"]
license = "MIT"
repository = "https://github.com/thomastheyoung/dbx-ignore"
homepage = "https://github.com/thomastheyoung/dbx-ignore"
readme = "README.md"
keywords = ["xattr", "dropbox", "macos", "cli", "cross-platform"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
git2 = { version = "0.18", default-features = false }
rayon = "1.8"
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
tempfile = "3.8"
walkdir = "2.4"

# Platform-specific dependencies
[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
xattr = "1.0"

[dev-dependencies]
